# ai_sensors

./: .env  .env_example  .gitignore  README.md  debug_contents_out.txt  main.py  pso_sensor_optimizer.py  pyproject.toml  simulate_esp32.py  test_mcp.py  test_mcp_debug.py
esp32/: diagram.json  main.py
mcp_agent/: agent.py
mcp_agent/.adk/: session.db
mcp_sensor_server/: __init__.py  server.py
mcp_sensor_server/.adk/: session.db
mqtt_agent/: __init__.py  agent.py
orchestrator_agent/: __init__.py  agent.py
orchestrator_agent/.adk/: session.db
